--- a/sass-project/sass/main.scss
+++ b/sass-project/sass/main.scss
@@ -8,11 +8,15 @@
     border-radius : 15px;
  
 .carousel-control-prev ,.carousel-control-next{
-    background-color: black;
+    background-color: white;
 }
-
+.collapse navbar-collapse{
+ justify-content: space-evenly;
 }
-
+}
+.dropdown-item{
+  background-color:white;
+}
 .slider-holder{
     flex:flex-grow;
     width:100vw;
@@ -26,61 +30,52 @@
     height:100vh;
    // background-color: green;
 }
-.button{
-    margin: 20rem 40%;
-    position:relative;
-    display:inline-block;
-    
-  }
-  
-  .button a{
-    color:white;
-    font-family:Helvetica, sans-serif;
-    font-weight:bold;
-    font-size:36px;
-    text-align: center;
-    text-decoration:none;
-    background-color:#FFA12B;
-    display:block;
-    position:relative;
-    padding:20px 40px;
-    
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    text-shadow: 0px 1px 0px #000;
-    filter: dropshadow(color=#000, offx=0px, offy=1px);
-    
-    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-    -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-    box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-    
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-  }
-  
-  .button a:active{
-    top:10px;
-    background-color:#F78900;
-    
-    -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
-    -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #915100;
-    box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
-  }
-  
-  .button:after{
-    content:"";
-    height:100%;
-    width:100%;
-    padding:4px;
-    position: absolute;
-    bottom:-15px;
-    left:-4px;
-    z-index:-1;
-    background-color:#2B1800;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-  }
+$color: #0cf;
+
+.button {
+  margin:5% auto;
+	display: inline-block;
+	padding: 2% 5rem;
+	border-radius: 10rem;
+	color: #fff;
+	text-transform: uppercase;
+	font-size: 1rem;
+	letter-spacing: .15rem;
+	transition: all .3s;
+	position: relative;
+	overflow: hidden;
+	z-index: 1;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: $color;
+		border-radius: 10rem;
+		z-index: -2;
+	}
+	&:before {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 0%;
+		height: 100%;
+		background-color: darken($color, 15%);
+		transition: all .3s;
+		border-radius: 10rem;
+		z-index: -1;
+	}
+	&:hover {
+		color: #fff;
+		&:before {
+			width: 100%;
+		}
+	}
+}
+
 .about-us{
     
     padding:1.5rem;
@@ -90,6 +85,7 @@
         text-align: center;
     }
     &-content{
+      margin:0 auto;
         padding-top: 1.5rem;
         padding-bottom: 1.5rem;
         padding-left: 3.5rem;
@@ -97,7 +93,7 @@
         text-align: center;
         margin-top: 1.5rem;
         margin-bottom:-1rem;
-        width:100%;
+        width:50%;
         height:80%;
         border-radius: 15px;
         background: linear-gradient(90deg, #e9d5ff, #ddd6fe, #d8b4fe);
@@ -109,7 +105,13 @@
     box-sizing : border-box;
    // font-familly : "Poppins", sans-serif;
   }
-
+.container-button{
+  padding-top: 200px;
+  margin: 5% auto;
+  margin-bottom: 10%;
+  width: 100%;
+  text-align: center;
+}
   .container {
     position : relative;
     width : 1100px;
@@ -119,7 +121,9 @@
     flex-warp : warp;
     padding : 30px;  
   }
-  
+  .card-top{
+    //height : 10px;
+  }
   .container .card {
     position: relative;
     max-width : 300px;
@@ -134,12 +138,19 @@
     transition : 0.3s ease-in-out;
     border-radius : 15px;
   }
-  .container .card:hover {
-    height : 320px;    
+  // .container .card:hover {
+  //   height : 320px;    
+  // }
+  
+  
+  
+  
+  .container .card .image img {
+    max-width : 100%;
+    border-radius : 15px;
   }
-  
-  
-  .container .card .image {
+  .card-top{
+    background-color: #bfdbfe;
     position : relative;
     width : 260px;
     height : 260px;
@@ -148,35 +159,35 @@
     left: 8px;
     box-shadow : 0 5px 20px rgba(0,0,0,0.2);
     z-index : 1;
-  }
-  
-  .container .card .image img {
+   // max-height: 200px;
     max-width : 100%;
     border-radius : 15px;
   }
-  
   .container .card .content {
     position : relative;
     top : -140px;
     padding : 10px 15px;
     color : #111;
     text-align : center;
-    
-    visibility : hidden;
-    opacity : 0;
-    transition : 0.3s ease-in-out;
+    margin-top : 60px;
+    visibility : visible;
+    //opacity : 0;
+    //transition : 0.3s ease-in-out;
       
   }
   
-  .container .card:hover .content {
-     margin-top : 30px;
-     visibility : visible;
-     opacity : 1;
-     transition-delay: 0.2s;
+  // .container .card:hover .content {
+  //    margin-top : 30px;
+  //    visibility : visible;
+  //    opacity : 1;
+  //    transition-delay: 0.2s;
     
-  }
+  // }
   .logo{
-    background: linear-gradient(90deg, #7e22ce, #ddd6fe, #f0abfc);;
+    margin-top:50px;
+    object-fit: contain;
+    height:200px;
+    width:200px;
   }
   @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;900&display=swap');
 
@@ -191,7 +202,7 @@
   background: #f2f2f2;
   overflow: hidden;
   border-radius: 20px;
-  cursor: pointer;
+  //cursor: pointer;
   box-shadow: 0 0 20px 8px #d0d0d0;
 }
 
@@ -202,7 +213,7 @@
   text-align: justify;
   color: black;
   padding: 40px;
-  font-family: 'Merriweather', serif;
+  //font-family: 'Merriweather', serif;
 }
 
 h1 {
@@ -214,83 +225,113 @@ h3 {
   font-weight: 300;
 }
 
-.flap {
-  width: 100%;
-  height: 100%;
-}
+// .flap {
+//   width: 100%;
+//   height: 100%;
+// }
 
-.flap::before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  background: url("https://pbs.twimg.com/profile_images/1347260174176710658/2GfSZ1i__400x400.jpg") white;
-  //background-position: 100px;
-  background-repeat: no-repeat;
-  transition: 1s;
-}
+// .flap::before {
+//   position: absolute;
+//   content: "";
+//   height: 100%;
+//   width: 100%;
+//   background: url("https://pbs.twimg.com/profile_images/1347260174176710658/2GfSZ1i__400x400.jpg") white;
+//   //background-position: 100px;
+//   background-repeat: no-repeat;
+//   transition: 1s;
+// }
 
-.flap::after {
-  position: relative;
-  //content: "dsafdsadasdsaf";
-  height: 100%;
-  width: 100%;
+// .flap::after {
+//   position: relative;
+//   //content: "dsafdsadasdsaf";
+//   height: 100%;
+//   width: 100%;
   
-  //background: url("https://pbs.twimg.com/profile_images/1347260174176710658/2GfSZ1i__400x400.jpg") white;
-  //background-position: -200px;
-  background-repeat: no-repeat;
-  transition: 1s;
-}
+//   //background: url("https://pbs.twimg.com/profile_images/1347260174176710658/2GfSZ1i__400x400.jpg") white;
+//   //background-position: -200px;
+//   background-repeat: no-repeat;
+//   transition: 1s;
+// }
 
-.container-who-can-submit:hover.flap::after {
-  transform: translatex(500px);
-}
+// .container-who-can-submit:hover.flap::after {
+//   transform: translatex(500px);
+// }
 
-.container-who-can-submit:hover .flap::before{
-  transform: translatex(-600px);
-}
+// .container-who-can-submit:hover .flap::before{
+//   transform: translatex(-600px);
+// }
 .who-can-container{
+  // display: flex;
+  // flex-direction: row;
+  // flex-wrap: wrap;
+  // //justify-content: center;
+  // align-items: center;
+  // gap: 16px;
+  // max-width: 1400px;
+  // margin: 100px auto;
+  // padding: 20px 10px;
+
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     width: 100vw;
-    //background-color: yellow;
-    font-family: 'Merriweather', serif;
+  //   background-color: yellow;
+  //  font-family: 'Merriweather', serif;
 }
 .space{
     height:2rem;
 }
 footer{
+  //display: inline-block;
+  margin-top: 100px;
     background-color: black;
-    text-align: center;
+    text-align: left;
     color: white;
     padding: 1rem;
-    text-align: center;
+   // text-align: center;
     font-size: 1.5rem;
     font-family: 'Merriweather', serif;
+    &-content{
+      display: inline;
+    }
+}
+
+.footer-content{
+  
+  display: inline;
+}
+.footer-content-right{
+  
+  margin-left:50%;
+  display: inline;
+  text-align: right;
 }
 .navbar{
     height: 5rem;
 }
 .award-of-work{
+  //margin:-5%;
+  margin-top:-80px;
+  margin-bottom: -80px;
     text-align: center;
     align-items: center;
 }
 .award-of-work-image{
-    margin:5rem auto;
+    margin:3rem auto;
     object-fit: contain;
     height:50%;
     width:50%;
     border-radius : 15px;
 }
 body{
-    background:linear-gradient(90deg, #1e3a8a , #c7d2fe, #60a5fa); ;
+    // background:linear-gradient(90deg, #1e3a8a , #c7d2fe, #60a5fa); 
+    background-color:#7dd3fc;
 }
 .award-of-work-content{
     align-items: center;
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
+        //padding-top: 1.5rem;
+        //padding-bottom: 1.5rem;
         padding-left: 3.5rem;
         padding-right: 3.5rem;
         text-align: center;
@@ -307,10 +348,19 @@ body{
     }
 }
 .icon-content{
+  margin-left: 10px;
     display: inline-block;
     &-logo{
+      margin-left: 10px;
         display: inline-block;
         width: 1rem;
         height: 1rem;
     }
+}
+.inline-objects{
+  //float: inline-block;
+  
+  flex-direction: row;
+  flex-wrap: wrap;
+ display: inline;
 }
