--- a/sass-project/css/style.css
+++ b/sass-project/css/style.css
@@ -7,7 +7,12 @@
   margin: 30px auto;
   border-radius: 15px; }
   .slider .carousel-control-prev, .slider .carousel-control-next {
-    background-color: black; }
+    background-color: white; }
+  .slider .collapse navbar-collapse {
+    justify-content: space-evenly; }
+
+.dropdown-item {
+  background-color: white; }
 
 .slider-holder {
   flex: flex-grow;
@@ -20,51 +25,43 @@
   height: 100vh; }
 
 .button {
-  margin: 20rem 40%;
+  margin: 5% auto;
+  display: inline-block;
+  padding: 2% 5rem;
+  border-radius: 10rem;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: .15rem;
+  transition: all .3s;
   position: relative;
-  display: inline-block; }
-
-.button a {
-  color: white;
-  font-family: Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 36px;
-  text-align: center;
-  text-decoration: none;
-  background-color: #FFA12B;
-  display: block;
-  position: relative;
-  padding: 20px 40px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-shadow: 0px 1px 0px #000;
-  filter: dropshadow(color=#000, offx=0 px, offy=1 px);
-  -webkit-box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-  -moz-box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-  box-shadow: inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px; }
-
-.button a:active {
-  top: 10px;
-  background-color: #F78900;
-  -webkit-box-shadow: inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
-  -moz-box-shadow: inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #915100;
-  box-shadow: inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100; }
-
-.button:after {
-  content: "";
-  height: 100%;
-  width: 100%;
-  padding: 4px;
-  position: absolute;
-  bottom: -15px;
-  left: -4px;
-  z-index: -1;
-  background-color: #2B1800;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px; }
+  overflow: hidden;
+  z-index: 1; }
+  .button:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #0cf;
+    border-radius: 10rem;
+    z-index: -2; }
+  .button:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    background-color: #008fb3;
+    transition: all .3s;
+    border-radius: 10rem;
+    z-index: -1; }
+  .button:hover {
+    color: #fff; }
+    .button:hover:before {
+      width: 100%; }
 
 .about-us {
   padding: 1.5rem;
@@ -73,6 +70,7 @@
     font-size: 8rem;
     text-align: center; }
   .about-us-content {
+    margin: 0 auto;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     padding-left: 3.5rem;
@@ -80,7 +78,7 @@
     text-align: center;
     margin-top: 1.5rem;
     margin-bottom: -1rem;
-    width: 100%;
+    width: 50%;
     height: 80%;
     border-radius: 15px;
     background: linear-gradient(90deg, #e9d5ff, #ddd6fe, #d8b4fe); }
@@ -89,6 +87,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
+
+.container-button {
+  padding-top: 200px;
+  margin: 5% auto;
+  margin-bottom: 10%;
+  width: 100%;
+  text-align: center; }
 
 .container {
   position: relative;
@@ -112,19 +117,19 @@
   transition: 0.3s ease-in-out;
   border-radius: 15px; }
 
-.container .card:hover {
-  height: 320px; }
+.container .card .image img {
+  max-width: 100%;
+  border-radius: 15px; }
 
-.container .card .image {
+.card-top {
+  background-color: #bfdbfe;
   position: relative;
   width: 260px;
   height: 260px;
   top: -40%;
   left: 8px;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-  z-index: 1; }
-
-.container .card .image img {
+  z-index: 1;
   max-width: 100%;
   border-radius: 15px; }
 
@@ -134,18 +139,14 @@
   padding: 10px 15px;
   color: #111;
   text-align: center;
-  visibility: hidden;
-  opacity: 0;
-  transition: 0.3s ease-in-out; }
-
-.container .card:hover .content {
-  margin-top: 30px;
-  visibility: visible;
-  opacity: 1;
-  transition-delay: 0.2s; }
+  margin-top: 60px;
+  visibility: visible; }
 
 .logo {
-  background: linear-gradient(90deg, #7e22ce, #ddd6fe, #f0abfc); }
+  margin-top: 50px;
+  object-fit: contain;
+  height: 200px;
+  width: 200px; }
 
 .container-who-can-submit {
   position: absolute;
@@ -155,15 +156,13 @@
   background: #f2f2f2;
   overflow: hidden;
   border-radius: 20px;
-  cursor: pointer;
   box-shadow: 0 0 20px 8px #d0d0d0; }
 
 .content-who-can-submit {
   position: absolute;
   text-align: justify;
   color: black;
-  padding: 40px;
-  font-family: 'Merriweather', serif; }
+  padding: 40px; }
 
 h1 {
   font-weight: 900;
@@ -172,73 +171,56 @@ h1 {
 h3 {
   font-weight: 300; }
 
-.flap {
-  width: 100%;
-  height: 100%; }
-
-.flap::before {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  background: url("https://pbs.twimg.com/profile_images/1347260174176710658/2GfSZ1i__400x400.jpg") white;
-  background-repeat: no-repeat;
-  transition: 1s; }
-
-.flap::after {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  background-repeat: no-repeat;
-  transition: 1s; }
-
-.container-who-can-submit:hover.flap::after {
-  transform: translatex(500px); }
-
-.container-who-can-submit:hover .flap::before {
-  transform: translatex(-600px); }
-
 .who-can-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100vw;
-  font-family: 'Merriweather', serif; }
+  width: 100vw; }
 
 .space {
   height: 2rem; }
 
 footer {
+  margin-top: 100px;
   background-color: black;
-  text-align: center;
+  text-align: left;
   color: white;
   padding: 1rem;
-  text-align: center;
   font-size: 1.5rem;
   font-family: 'Merriweather', serif; }
+  footer-content {
+    display: inline; }
+
+.footer-content {
+  display: inline; }
+
+.footer-content-right {
+  margin-left: 50%;
+  display: inline;
+  text-align: right; }
 
 .navbar {
   height: 5rem; }
 
 .award-of-work {
+  margin-top: -80px;
+  margin-bottom: -80px;
   text-align: center;
   align-items: center; }
 
 .award-of-work-image {
-  margin: 5rem auto;
+  margin: 3rem auto;
   object-fit: contain;
   height: 50%;
   width: 50%;
   border-radius: 15px; }
 
 body {
-  background: linear-gradient(90deg, #1e3a8a, #c7d2fe, #60a5fa); }
+  background-color: #7dd3fc; }
 
 .award-of-work-content {
   align-items: center;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
   padding-left: 3.5rem;
   padding-right: 3.5rem;
   text-align: center;
@@ -253,8 +235,15 @@ body {
     font-size: 5rem; }
 
 .icon-content {
+  margin-left: 10px;
   display: inline-block; }
   .icon-content-logo {
+    margin-left: 10px;
     display: inline-block;
     width: 1rem;
     height: 1rem; }
+
+.inline-objects {
+  flex-direction: row;
+  flex-wrap: wrap;
+  display: inline; }
